Prevent iframes from overflowing on page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -119,6 +119,10 @@ p {
     font-weight: 400;
 }
 
+iframe {
+    max-width: 100%;
+}
+
 @import 'components/blockquotes';
 @import 'components/blocks';
 @import 'components/buttons';
